--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "npm run lint:fix && npm run build:build",
     "build:build": "rollup -c",
-    "ci": "npm run lint && npm run build:build && npm run test:test",
+    "ci": "npm run lint && npm run build:build && npm run test:tests",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
     "test": "npm run build && npm run test:tests",
