--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -5,7 +5,7 @@
 # windows.
 # https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Build
 
 on:
   push:
