chore: add coverage script and ignore reports

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # .gitignore
 
+# Don't lock versions for a library.
+package-lock.json
+
 /node_modules/
 
 # Distribution files.
 /dist/
 
-# Don't lock versions for a library.
-package-lock.json
+# Test reports.
+/coverage/
