--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,8 @@
 # .npmignore
+
+# Don't lock versions for a library.
+package-lock.json
+
 # Mirrors .gitignore except for /dist/
 
 /node_modules/
@@ -6,5 +10,6 @@
 # Distribution files.
 # /dist/
 
-# Don't lock versions for a library.
-package-lock.json
+# Test reports.
+/coverage/
+
