--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -22,8 +22,13 @@ jobs:
     strategy:
       matrix:
         runs-on: [ubuntu-latest, macos-latest, windows-latest]
-        node-version: [12.x, 14.x, 16.x]
-        # See https://nodejs.org/en/about/releases/.
+        node-version:
+          # See https://nodejs.org/en/about/releases/.
+          - 12.x # Until 2022-04-30
+          - 14.x # Until 2023-04-30
+          - 16.x # Until 2024-04-30
+          # - 17.x # From 2021-10-19
+          # - 18.x # From 2022-04-19
 
     steps:
       - uses: actions/checkout@v2
