--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilerplate-module",
-  "version": "0.1.3-dev",
+  "version": "0.1.4",
   "description": "Boilerplate for a JavaScript module (browser + node).",
   "keywords": [
     "boilerplate"
@@ -24,20 +24,21 @@
     "lint:fix": "eslint . --fix && prettier . --write",
     "test": "jest test --verbose",
     "test:ci": "npm run test",
+    "test:coverage": "jest test/unit --coverage",
     "test:func": "jest test/functional --verbose",
     "test:unit": "jest test/unit --verbose"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@rollup/plugin-babel": "^5.2.2",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "eslint": "^7.27.0",
-    "eslint-plugin-jest": "^24.3.6",
-    "jest": "^27.0.1",
-    "prettier": "^2.3.0",
-    "rollup": "^2.50.1",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "eslint": "^7.32.0",
+    "eslint-plugin-jest": "^24.4.0",
+    "jest": "^27.2.0",
+    "prettier": "^2.4.0",
+    "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
