--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilerplate-module",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Boilerplate for a JavaScript module (browser + node).",
   "keywords": [
     "boilerplate"
@@ -32,6 +32,7 @@
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "eslint": "^7.32.0",
@@ -40,8 +41,5 @@
     "prettier": "^2.4.0",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2"
-  },
-  "dependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0"
   }
 }
