--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -27,7 +27,7 @@ jobs:
           - 12.x # Until 2022-04-30
           - 14.x # Until 2023-04-30
           - 16.x # Until 2024-04-30
-          # - 17.x # From 2021-10-19
+          - 17.x # From 2021-10-19
           # - 18.x # From 2022-04-19
 
     steps:
