--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boilerplate-module",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "Boilerplate for a JavaScript module (browser + node).",
   "keywords": [
     "boilerplate"
@@ -13,6 +13,10 @@
   },
   "author": "My Name (http://github.com/user)",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "type": "module",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "browser": "dist/boilerplate-module.min.js",
@@ -22,22 +26,19 @@
     "ci": "npm run lint && npm run build:build && npm run test:ci",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
-    "test": "jest test --verbose",
+    "test": "mocha test --recursive",
     "test:ci": "npm run test",
-    "test:coverage": "jest test/unit --coverage",
-    "test:func": "jest test/functional --verbose",
-    "test:unit": "jest test/unit --verbose"
+    "test:coverage": "c8 --src=src --all --reporter=text --reporter=html npm run test:unit",
+    "test:dist": "mocha test/dist --recursive",
+    "test:unit": "mocha test/unit --recursive"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.4",
-    "eslint": "^7.32.0",
-    "eslint-plugin-jest": "^24.4.0",
-    "jest": "^27.2.0",
+    "@babel/preset-env": "^7.16.11",
+    "@rollup/plugin-babel": "^5.3.1",
+    "chai": "^4.3.6",
+    "eslint": "^8.10.0",
+    "eslint-plugin-mocha": "^10.0.3",
+    "mocha": "^9.2.1",
     "prettier": "^2.4.0",
     "rollup": "^2.56.3",
     "rollup-plugin-terser": "^7.0.2"
