--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:unit": "mocha test/unit --recursive"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.1",
     "chai": "^4.3.6",
