--- a/package.json
+++ b/package.json
@@ -30,18 +30,20 @@
     "test:ci": "npm run test",
     "test:coverage": "c8 --src=src --all --reporter=text --reporter=html npm run test:unit",
     "test:dist": "mocha test/dist --recursive",
-    "test:unit": "mocha test/unit --recursive"
+    "test:unit": "mocha --loader ts-node/esm --extensions ts,tsx 'test/unit/**/*.{ts,tsx}'"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-typescript": "^8.3.1",
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
     "chai": "^4.3.6",
     "eslint": "^8.10.0",
     "eslint-plugin-mocha": "^10.0.3",
     "mocha": "^9.2.1",
     "prettier": "^2.4.0",
     "rollup": "^2.56.3",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-node": "^10.6.0",
+    "typescript": "^4.6.2"
   }
 }
