--- a/package.json
+++ b/package.json
@@ -14,15 +14,17 @@
   "author": "My Name (http://github.com/user)",
   "license": "MIT",
   "files": [
-    "dist"
+    "dist",
+    "types"
   ],
+  "types": "types/index.d.ts",
   "type": "commonjs",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "browser": "dist/boilerplate-module.min.js",
   "scripts": {
     "build": "npm run lint:fix && npm run build:build",
-    "build:build": "rollup -c",
+    "build:build": "tsc --project tsconfig-types.json && rollup -c",
     "ci": "npm run lint && npm run test:unit && npm run build:build && npm run test:dist",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
