--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "boilerplate-module",
+  "name": "template-ts",
   "version": "0.3.0",
-  "description": "Boilerplate for a TypeScript module (browser + node).",
+  "description": "Template for a TypeScript module (browser + node).",
   "keywords": [
-    "boilerplate"
+    "template"
   ],
   "homepage": "https://github.com/user/repo",
   "bugs": "https://github.com/user/repo/issues",
@@ -21,7 +21,7 @@
   "type": "commonjs",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "browser": "dist/boilerplate-module.min.js",
+  "browser": "dist/template-ts.min.js",
   "scripts": {
     "build": "npm run lint:fix && npm run build:build",
     "build:build": "tsc --project tsconfig-types.json && rollup -c",
@@ -33,6 +33,8 @@
     "test:unit": "cross-env TS_NODE_COMPILER_OPTIONS=\"{ \\\"module\\\": \\\"commonjs\\\" }\" mocha -r ts-node/register test/unit/**/*.{ts,tsx}"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
